card dark mode ui bug fixed and ui changes for phone and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,8 @@ body {
 /* desktop css */
 .desktop-design {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  flex-direction: column-reverse;
 }
   .cardContainer{
     width: 70%;
@@ -56,11 +57,13 @@ body {
     order: 2;
   }
   .top-query{
-  width: 15%;
+    width: 70%;
     display: inline-grid;
     order: 1;
-    align-self: flex-start;
-        align-items: flex-start;
+    align-self: center;
+    align-items: flex-start;
+    position: fixed;
+    bottom: 70px;
   }
   .sidebar{
     order: 3;
@@ -300,6 +303,7 @@ body {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  height: 70px;
 }
 
 .top-query ul li {
@@ -308,9 +312,9 @@ body {
   display: inline-flex;
   margin-right: 10px;
   word-break: keep-all;
-  width: 100%;
+  width: auto;
   align-self: flex-start;
-  Flex: 0 0 85%;
+  Flex: 0 0 40%;
   padding: 4px 0px 0;
   background-color: #F2F2F2;
   border-radius: 8px;
@@ -695,6 +699,9 @@ button {
   background-color: transparent;
 }
 
+.dark-theme .query-section .message-section{
+  background:var(--dark-gray) !important;
+}
 .query-section .message-textarea a span {
   display: none;
 }
@@ -859,6 +866,7 @@ display: none;
 }
 
 .prompt-cont.top-query ul{
+  border-radius:8px ;
   overflow-x: auto;
   background-repeat: no-repeat;
   background-position: left center, right center, left center, right center;
@@ -895,19 +903,37 @@ display: none;
     margin-bottom: 35px;
   }
   .top-query {
-    display: inherit;
+    position: fixed;
+    bottom: 20px;
     margin-top: 23px;
     padding: 0 20px 0;
-    height: 127px;
+    height: 150px;
+    left: 0px;
     width: auto;
-  
+    display: block;
+
+  }
+  .top-query ul li{
+    Flex: 0 0 70%;
+  }
+  .cardpage.dark-theme .top-query{
+    background: var(--dark-gray);
+  }
+  .cardpage.dark-theme .top-query ul li {
+    background-color: #545454;
+    color: #D9D9D9;
+    border: 1px solid #FAFAFA;
+  }
+
+  .cardpage.dark-theme .top-query h3 {
+    color: var(--white);
   }
   .sidebar{
     display: none;
   }
   .dark-theme {
     background: var(--dark-gray);
-    height: auto !important;
+    height: 100% !important;
   }
   .bottom-prompt-box ul li {
     flex: 0 0 90%;
